# learnopengl

./: .gitignore  CMakeLists.txt  README.md  Untitled Diagram.drawio  parse.drawio  render-main.drawio  running.drawio
include/: imgui_impl_opengl3.h
include/JTool/: j_camera.h  j_frambuffer.h  j_light.h  j_op.h  j_opqueue.h  j_polygen.h  j_texture.h  j_window.h  model.h  shader.h
shaders/: lightcube.vert  material.frag  model.frag  muiltylight.frag  notex.frag  notex.vert  parallel.frag  parallel.vert  point.frag  specular.frag  spotlight.frag  test.vert
src/: imgui_impl_opengl3.cpp  j_camera.cpp  j_frambuffer.cpp  j_light.cpp  j_op.cpp  j_opqueue.cpp  j_polygen.cpp  j_texture.cpp  j_window.cpp  main.cpp
